<resources>
    <string name="app_name">TiViShowZ</string>
    <string name="NCISLA">NCIS : Los Angeles</string>
    <string name="NCISLA_desc">Saison 2 Episode 3</string>
    <string name="NCISLA_beginYear">2009</string>
    <string name="NCISLA_endYear">En production</string>
    <string name="NCISlA_episodesToWatch">16</string>
    <string name="edit_show">Editer la série</string>
    <string name="delete_show">Supprimer la série</string>
    <string name="add_show">Ajouter une série</string>
    <string name="add_season">Ajouter une saison</string>
    <string name="title_activity_by_episode">ByEpisode</string>
    <string name="edit_episode">Editer l\'épisode</string>
    <string name="delete_episode">Supprimer l\'épisode</string>
    <string name="add_actor">Ajouter un acteur</string>
    <string name="NCISLA_season">Saison 2</string>
    <string name="delete_season">Supprimer la saison</string>
    <string name="add_episode">Ajouter un épisode</string>
    <string name="nextToWatch">A voir prochainement</string>
    <string name="ok">Ok</string>
    <string name="cancel">Annuler</string>
    <string name="create">CREER</string>
    <string name="delete">Supprimer</string>
    <string name="action_search">Recherche</string>
    <string name="action_settings">Paramètres</string>
    <string name="byShow_pageTitle">Série</string>
    <string name="bySeason_pageTitle">Saison</string>
    <string name="byEpisode_pageTitle">Episode</string>
    <string name="byActor_pageTitle">Acteurs</string>
    <string name="main_pageTitle">Mes séries</string>
    <string name="alert_deletetitle">SUPPRIMER</string>
    <string name="ShowStart">Année de début de la série :</string>
    <string name="ShowEnd">Année de fin de la série :</string>
    <string name="ShowName">Nom de la série :</string>
    <string name="buttonOk">OK !</string>
    <string name="buttonCancel">ANNULER</string>
    <string name="buttonLoadPicture">CHARGER UNE PHOTO !</string>
    <string name="alert_create">CREER</string>
    <string name="alert_editEpisode">EDITER</string>
    <string name="alert_newSeasonQuestion">Êtes-vous sûr(e) de vouloir créer une nouvelle saison ?</string>
    <string name="message_alert_delete_season">Êtes-vous sûr(e) de vouloir supprimer la saison ? Ceci est une action irréversible.</string>
    <string name="message_alert_delete_show">Êtes-vous sûr(e) de vouloir supprimer la série ? Ceci est une action irréversible.</string>
    <string name="message_alert_delete_episode">Êtes-vous sûr(e) de vouloir supprimer l\'épisode ? Ceci est une action irréversible.</string>
    <string name="alert_newEpisodeQuestion">Quel est le nom de l\'épisode ?</string>
    <string name="alert_editEpisodeQuestion">Corriger le titre de l\'épisode :</string>
    <string name="buttonSave">SAUVER</string>
    <string name="cbisFinished">La série est-elle terminée ?</string>
    <string name="title_activity_by_actor2">ByActor2</string>
    <string name="title_activity_by_show_creation">Ajouter une série</string>
    <string name="pref_summary">Choisissez votre langue préférée</string>
    <string name="pref_select_language">Choisissez votre langue</string>
    <string name="nextToWatchCount">épisode(s) à regarder</string>
    <string name="validateAddActor">Valider</string>
    <string name="alert_actorFirstName">Prénom</string>
    <string name="alert_actorLastName">Nom</string>
    <string name="Season">" Saison "</string>
    <string name="on_production">En production</string>
    <string name="picked_image">Vous n\'avez pas choisi d\'image</string>
    <string name="something_wrong">Problème survenu</string>
    <string name="only_last_episode">Vous pouvez seulement supprimer le dernier épisode</string>
    <string name="no_more_episodes">Pas d\'autres épisodes</string>
    <string name="title_too_short">Titre trop court !</string>
    <string name="no_episode_added">Aucun épisode ajouté !</string>
    <string name="only_last_season">Vous pouvez seulement supprimer la dernière saison</string>
    <string name="no_more_actor">Pas d\'autre acteur à ajouter !</string>
    <string name="message_alert_delete_actor">Etes-vous sûr(e) de vouloir retirer cette personne ?</string>
    <string name="title_activity_by_show_edition">Modifier la série</string>
    <string name="name_or_lastname_missing">Il doit manquer quelque chose !</string>
    <string name="image_missing">L\'image est manquante !</string>
    <string name="title_missing">Titre manquant !</string>
    <string name="showStart_missing">Année de début invalide !</string>
    <string name="showEnd_missing">Année de fin invalide !</string>
</resources>