<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ByEpisode">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_margin="6dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="6dp"
                    android:contentDescription="imageShow"
                    android:src="@drawable/ncis_la" />


                <TextView
                    android:id="@+id/firstLine"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_toRightOf="@id/icon"
                    android:gravity="center_vertical"
                    android:text="Un mal nécessaire"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/secondLine"
                    android:layout_width="fill_parent"
                    android:layout_height="26dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/icon"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/NCISLA_desc"
                    android:textSize="20sp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:contentDescription="editIcon"
                android:src="@drawable/edit45" />

            <TextView
                android:id="@+id/editEpisodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_episode"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/deleteIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:contentDescription="deleteIcon"
                android:src="@drawable/delete96" />

            <TextView
                android:id="@+id/deleteEpisodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_episode"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout_addActor"
            android:layout_margin="5dp"
            android:onClick="setContentView">

            <ImageView
                android:id="@+id/addIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:contentDescription="addIcon"
                android:src="@drawable/add182" />

            <TextView
                android:id="@+id/addActorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_actor"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/addShowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Casting"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listOfSeries"
                android:headerDividersEnabled="true">

            </ListView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

